# valadate

./: meson.build  meson_options.txt
libvaladate/: meson.build
libvaladate/drivers/: meson.build
libvaladate/drivers/0.36.x/: driver.vala
libvaladate/src/: assembly.vala  driver.vala  loadable.vala  pluginmodule.vala  systemprogram.vala  testadapter.vala  testassembly.vala  testreportprinter.vala  texttestplan.vala  vapitestplan.vala
tests/: meson.build
tests/PIE/: meson.build  testloadpie.vala
tests/abstract-tests/: abstract-tests.vala  concrete-tests.vala  meson.build
tests/genie/: meson.build
tests/libvaladate/: meson.build
tests/libvaladate/data/: meson.build  testexe.vala
tests/libvaladate/gdb/: meson.build  test-runner.vala
tests/libvaladate/src/: assembly.vala  girtestplan.vala  main.vala  meson.build  mocks.vala  testassembly.vala  testplan.vala  testreport.vala  testresult.vala  vapitestplan.vala
tests/libvaladate/utils/: meson.build  wait.vala
